Crash when using Interactive Mesh Tool with Normal Orientation and zero objects in scene. #77548

Closed
opened 2020-06-07 01:44:12 +02:00 by David · 6 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.92

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-05 22:39, hash: b74cc23dc4
Worked: (newest version of Blender that worked as expected)

Short description of error
Crash when using the Interactive Mesh Tool

Exact steps for others to reproduce the error
Open a new scene
Delete all objects
Set Transform Orientation to Normal
Use the new Interactive Mesh Creation Tool and click anywhere in Global space.

If there are any objects in the scene, there won't be any crash. It will only crash if there are no objects for that tool to grab Normals information from.

#77548 - Crash log.txt

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.92 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-05 22:39, hash: `b74cc23dc4` Worked: (newest version of Blender that worked as expected) **Short description of error** Crash when using the Interactive Mesh Tool **Exact steps for others to reproduce the error** Open a new scene Delete all objects Set Transform Orientation to Normal Use the new Interactive Mesh Creation Tool and click anywhere in Global space. If there are any objects in the scene, there won't be any crash. It will only crash if there are no objects for that tool to grab Normals information from. [#77548 - Crash log.txt](https://archive.blender.org/developer/F8588086/T77548_-_Crash_log.txt)
Author

Added subscriber: @Genesys

Added subscriber: @Genesys
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm on Linux with a GTX 1050Ti with 2.90.0 aed11c673e (2020-06-06 14:18).

And it's not just when there are no objects in the scene. It happens when the only objects in the scene are ones created with the interactive mesh creation tool.

Adding a crash log to the task.

Can confirm on Linux with a GTX 1050Ti with 2.90.0 `aed11c673e` (2020-06-06 14:18). And it's not just when there are no objects in the scene. It happens when the only objects in the scene are ones created with the interactive mesh creation tool. Adding a crash log to the task.
Deep Majumder self-assigned this 2020-06-07 11:49:11 +02:00

This issue was referenced by c323f3e90a

This issue was referenced by c323f3e90a4a0d15e7d9e844e0473ed62a25862f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77548
No description provided.