Fix T77548: Crash when using Add Object Tool with Normal Orientation and zero objects in scene

The crash is caused by the fact that a NULL Object pointer is passed to
calculate the transform orientation, which has been set to normal.

A check has been include to detect the same.

Differential Revision: https://developer.blender.org/D7951